@@ -4,6 +4,7 @@
 == 0.5.0 (xx xxx 2010) ==
 
  * Re-implemented fookebox in Python (using Pylons)
+ * Added support for rhythmbox' covert art file naming scheme
  * Added German translation
 
 == 0.4.3 (21 Jun 2010) ==
